--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,10 @@ body{
 li {
   margin-bottom: 20px;
 }
+#image{
+  display: block;
+  width: 70%;
+  max-width:80%;
+  margin-right: auto;
+  margin-left: auto;
+}
